Feat: Filter posts by category
