# backend/src/DTO/PostSearchDTO.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\DTO;
+
+use App\Trait\AutoMapper;
+
+class PostSearchDTO extends SearchDTO
+{
+    use AutoMapper;
+
+    public ?int $categoryId;
+}
